# ipyannote

./: .gitignore  README.md  jsconfig.json  package-lock.json  package.json  pyproject.toml  vite.config.mjs
examples/: example.ipynb  modularized.ipynb
js/: Controls.svelte  Labels.svelte  Region.svelte  Waveform.svelte  Wavesurfer.svelte  Widget.svelte  controls.js  labels.js  stores.js  waveform.js  widget.css  widget.js
src/ipyannote/: __init__.py
src/ipyannote/static/: widget.css  widget.js
