[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyannote"
version = "0.0.0"
dependencies = [
    "anywidget",
    "numpy>=2.1.0",
    "scipy>=1.14.1",
]
readme = "README.md"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyannote/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyannote/static/widget.js"]
skip-if-exists = ["src/ipyannote/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
